--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cryptography==44.0.2
 cssutils==2.11.1
 dotenv==0.9.9
 ecdsa==0.19.1
+EditorConfig==0.17.0
 fastapi==0.115.0
 flatbuffers==25.2.10
 gast==0.6.0
@@ -23,6 +24,7 @@ grpcio==1.71.0
 h11==0.14.0
 h5py==3.13.0
 idna==3.10
+jsbeautifier==1.15.4
 keras==3.9.2
 libclang==18.1.1
 Markdown==3.8
