--- a/requirements.txt
+++ b/requirements.txt
@@ -81,3 +81,10 @@ Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.2
 wsproto==1.2.0
+transformers==4.48.3
+datasets==3.2.0
+optimum==1.24.0
+openai==1.61.0
+wandb
+json-repair==0.29.1
+faker==35.2.0
