add image tag + complex example

--- a/Compiler_V3/WebCodeGenerator/config.json
+++ b/Compiler_V3/WebCodeGenerator/config.json
@@ -114,7 +114,7 @@
     "image": {
       "htmlTag": "image",
       "cssClasses": [
-        "text"
+        "img"
       ],
       "textLimit": 20,
       "defaultColor": [
