--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 absl-py==2.2.2
 annotated-types==0.7.0
 anyio==4.9.0
+anytree==2.13.0
 APScheduler==3.11.0
 asttokens==3.0.0
 astunparse==1.6.3
 attrs==25.3.0
+babel==2.17.0
 backcall==0.2.0
 backend==0.2.4.1
+backrefs==5.8
 bcrypt==4.3.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
@@ -16,11 +19,13 @@ certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
 cryptography==44.0.2
 cssutils==2.11.1
 decorator==5.2.1
 deepface==0.0.93
 defusedxml==0.7.1
+distro==1.9.0
 docopt==0.6.2
 dotenv==0.9.9
 ecdsa==0.19.1
@@ -37,12 +42,15 @@ fsspec==2025.3.2
 gast==0.6.0
 gdown==5.2.0
 generativeai==0.0.1
+ghp-import==2.1.0
+google==3.0.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.0rc1
 google-api-python-client==2.169.0
 google-auth==2.40.1
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
+google-genai==1.20.0
 google-generativeai==0.8.5
 google-pasta==0.2.0
 googleapis-common-protos==1.70.0
@@ -53,7 +61,9 @@ gspread==6.2.1
 gunicorn==23.0.0
 h11==0.14.0
 h5py==3.13.0
+httpcore==1.0.9
 httplib2==0.22.0
+httpx==0.28.1
 huggingface-hub==0.31.2
 idna==3.10
 iniconfig==2.1.0
@@ -61,6 +71,7 @@ ipython==8.12.3
 itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
+jiter==0.10.0
 joblib==1.5.1
 jsbeautifier==1.15.4
 json_repair==0.29.1
@@ -71,6 +82,7 @@ jupyter_core==5.8.1
 jupyterlab_pygments==0.3.0
 kaggle==1.7.4.5
 keras==3.9.2
+lark-parser==0.12.0
 libclang==18.1.1
 lz4==4.4.4
 Markdown==3.8
@@ -78,7 +90,12 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+mergedeep==1.3.4
 mistune==3.1.3
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.6.14
+mkdocs-material-extensions==1.3.1
 ml_dtypes==0.5.1
 more-itertools==10.6.0
 mpmath==1.3.0
@@ -88,6 +105,7 @@ nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 networkx==3.4.2
+ngrok==1.4.0
 numpy==2.1.3
 nvidia-cublas-cu12==12.6.4.1
 nvidia-cuda-cupti-cu12==12.6.80
@@ -104,15 +122,18 @@ nvidia-nccl-cu12==2.26.2
 nvidia-nvjitlink-cu12==12.6.85
 nvidia-nvtx-cu12==12.6.77
 oauthlib==3.2.2
+openai==1.84.0
 opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.15.0
 outcome==1.3.0.post0
 packaging==24.2
+paginate==0.5.7
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 passlib==1.7.4
+pathspec==0.12.1
 pexpect==4.9.0
 pickleshare==0.7.5
 pillow==10.4.0
@@ -132,6 +153,7 @@ pydantic==2.9.2
 pydantic_core==2.23.4
 pyee==12.1.1
 Pygments==2.19.1
+pymdown-extensions==10.15
 pyparsing==3.2.3
 PySocks==1.7.1
 pytest==8.4.0
@@ -142,6 +164,7 @@ python-multipart==0.0.9
 python-slugify==8.0.4
 pytz==2025.2
 PyYAML==6.0.2
+pyyaml_env_tag==1.1
 pyzmq==26.4.0
 referencing==0.36.2
 regex==2024.11.6
@@ -185,15 +208,13 @@ tzlocal==5.3.1
 uritemplate==4.1.1
 urllib3==2.4.0
 uvicorn==0.30.6
+watchdog==6.0.0
 wcwidth==0.2.13
 webencodings==0.5.1
 websocket-client==1.8.0
+websockets==15.0.1
 Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.2
 wsproto==1.2.0
 yarg==0.1.9
-
-openai~=1.84.0
-json_repair~=0.29.1
-lark-parser~=0.12.0
